platform/kubernetes/base/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: shopsphere-monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: dashboard
